src/build/boc/tests/test-command-chaining-failure/expected-output.txt
==== stderr ====
Building 4 out-of-date targets
src/myprog/main.cpp:1:1: error: expected unqualified-id before ‘this’
 this is not a valid c++ source file
 ^
[ERROR] Build failed
==== stdout ====
Failed:
    pkg/obj/src/myprog/main.o
